# mana-tui

./: Cargo.toml  readme.md
examples/todo-app/: Cargo.toml
examples/todo-app/src/: main.rs
mana-tui-beheaded/: Cargo.toml
mana-tui-beheaded/src/: focus.rs  lib.rs
mana-tui-elemental/: Cargo.toml  readme.md
mana-tui-elemental/src/: layout.rs  lib.rs  prelude.rs  ui.rs
mana-tui-macros/: Cargo.toml
mana-tui-macros/src/: lib.rs  manasx.rs  subview.rs  utils.rs
mana-tui-macros/tests/: ui.rs
mana-tui-utils/: Cargo.toml
mana-tui-utils/src/: lib.rs  resource.rs  systems.rs
mx/: Cargo.toml  README.md
mx/mx-cli/: Cargo.toml
mx/mx-cli/src/: args.rs  ipc.rs  main.rs  tui.rs
mx/mx-core/src/: logging.rs
mx/src/: args.rs  logging.rs  main.rs
ratatui-elemental/: Cargo.toml
ratatui-elemental/src/: layout.rs  lib.rs  typemap.rs
src/: lib.rs
