[package]
name = "ratatui-mana"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["ratatui-elemental"]

[workspace.dependencies]
bon = "3.8.1"
ratatui = "0.29.0"
flume = "0.11.1"
smol = "2.0.2"
slab = "0.4.11"
smallbox = { version = "0.8.8", features = ["nightly"] }
smallvec = "1.15.1"
derive_more = { version = "2.1.0", features = ["full"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dependencies]
bon.workspace = true
ratatui.workspace = true
flume.workspace = true
smol.workspace = true
slab.workspace = true
smallbox.workspace = true
smallvec.workspace = true
derive_more.workspace = true
crossterm.workspace = true
tailcall = "1.0.1"
im = "15.1.0"
