[package]
name = "mana-tui"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"

[features]
macros = ["dep:bon", "dep:mana-tui-macros"]
nightly = ["mana-tui-elemental/nightly"]

[workspace]
resolver = "3"
members = [
  "mana-tui-elemental",
  "mana-tui-macros",
  "mana-tui-subsecond",
  # examples:
  "examples/todo-app",
]

[dependencies]
mana-tui-macros = { workspace = true, optional = true }
mana-tui-elemental.workspace = true
ratatui.workspace = true
bon = { workspace = true, optional = true }

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
mana-tui-elemental.path = "./mana-tui-elemental"
mana-tui-macros.path = "./mana-tui-macros"
mana-tui-subsecond.path = "./mana-tui-subsecond"
bon = "3.8.1"
ratatui = { git = "https://github.com/wyvernbw/ratatui.git", branch = "serde-color-fmt-v2", features = ["serde-color-fmt-v2"] }
derive_more = { version = "2.1.0", features = ["full"] }
tracing = "0.1.44"
hecs = { git = "https://github.com/Ralith/hecs.git", version = "0.11.0", features = ["macros"] }

[dev-dependencies]
bon = "3.8.1"
ratatui.workspace = true
mana-tui-macros.workspace = true
mana-tui-elemental.workspace = true
hecs.workspace = true


[patch.crates-io]
async-executor = { git = "https://github.com/wyvernbw/async-executor.git", branch = "scoped", version = "1.13.3" }
