[package]
name = "mana-tui-beheaded"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
glam = "0.30.10"
strum = { version = "0.27.2", features = ["derive"] }
tui-scrollview = "0.6.2"

[dev-dependencies]
mana-tui = { path = "..", features = ["nightly", "macros"] }
mana-tui-macros.workspace = true 
tracing-subscriber = "0.3.22"
color-eyre = "*"

[lints]
workspace = true
