[package]
name = "mana-tui-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.105"
slab = "0.4.11"
bon = { workspace = true, features = ["experimental-overwritable"] }
unsynn = "0.3.0"

[dev-dependencies]
mana-tui-elemental.workspace = true

[lints]
workspace = true
