[package]
name = "mx"
version = "0.1.0"
description = "dev server for ratatui applications"
authors = ["wyvernbw <iamwyvern511@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
tracing.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.3"
ratatui.workspace = true
portable-pty = "0.9.0"
tui-term = "0.3.0"
vt100 = "0.16.2"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
flume = { version = "0.12.0", default-features = false }
tachyonfx = { version = "0.22.0" }
terminput = "0.5.12"
terminput-crossterm = "0.4.8"

